syntax="proto3";

option go_package=".;pb";

import "memory_message.proto";

message Filter {
    double max_price_used = 1;
    uint32 min_cpu_cores = 2;
    double min_cpu_ghz = 3;
    Memory min_ram = 4;
}